fixing the titles and the scrollbar that appears on loading the form

--- a/login/view/css/registration.css
+++ b/login/view/css/registration.css
@@ -1,6 +1,5 @@
-.loginHeader {margin-bottom: 40px;text-align: center;}
+.loginHeader {margin-bottom: 40px;text-align: left;}
 h3 {text-align: left;margin-top: 0;}
-h5 {padding-right: 15px;padding-left: 15px;}
 .language .form-group {text-align: left;}
 .brandImg {margin-bottom: 40px;width:30%; height: auto;}
 .cont {
@@ -25,7 +24,20 @@ h5 {padding-right: 15px;padding-left: 15px;}
     padding: 0 15px;
 }
 
-.form form {overflow-y: auto;padding: 0 15px;}
+.form form {
+    overflow-y: auto;
+    padding: 0 15px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.form form > * {
+    width: 100%;
+}
 
 .sign-up {
     width: 100%;
@@ -160,6 +172,13 @@ h5 {padding-right: 15px;padding-left: 15px;}
  .sign-in {
      transition-timing-function: ease-out;
 }
+ .sign-in > div {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
  .cont.s--signup .sign-in {
      transition-timing-function: ease-in-out;
      transition-duration: 1.2s;
